LoggedInView, MySections View, a bit Uploading Result by teacher, Main page integration, Updated Results table

--- a/site/UploadAssignment.html
+++ b/site/UploadAssignment.html
@@ -227,15 +227,15 @@ margin-top: 100px;
 <h2 style = "color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Upload Assignments </h2>
 <div class="form-group">
 <br>
-<p><font size="4">&emsp; &emsp; Class &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp;<input type ="text" id="name"> <br>
+<p><font size="4">&emsp; &emsp; Class &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp;6 <br>
+
+<p><font size="4">&emsp; &emsp; Section &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp;A <br>
+
 </div>
 <div class="form-group">
 
-&emsp; &emsp; Courses &emsp; &emsp;&nbsp; &emsp; &emsp; <select id = "cmb" name="Sec">
-  <option selected>--Please Select--</option>
-<option>Science</option>
-<option>Mathematics</option>
-</select>  <br>
+&emsp; &emsp; Courses &emsp; &emsp;&nbsp; &emsp; &emsp; Mathematics
+    <br>
 <p><font size="4">&emsp; &emsp; Title &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp;<input type ="text" id="name"> <br>
 <p><font size="4">&emsp; &emsp; Description <br> &emsp; &emsp; &emsp; &emsp;&emsp; &emsp; &emsp; &nbsp; &emsp; &emsp;<textarea id="name" style = "height :100px; width : 225px"></textarea> <br>
 
