--- a/site/UploadResult.html
+++ b/site/UploadResult.html
@@ -237,27 +237,16 @@ table {
 <h2 style = "color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Upload Results </h2>
 <div class="form-group">
 
-<p><font size="4">&emsp; &emsp; Class &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp;<input type ="text" id="name"> <br>
+<p><font size="4">&emsp; &emsp; Class &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp;6 <br>
 </div>
 <div class="form-group">
 
-&emsp; &emsp; Section &emsp; &emsp;&nbsp;&nbsp; &emsp; &emsp; <select id = "cmb" name="Sec">
-  <option selected>--Please Select--</option>
-<option>A</option>
-<option>B</option>
-<option>C</option>
-<option>D</option>
-</select>  <br><br>
-
-&emsp; &emsp; Courses &emsp; &emsp;&nbsp; &emsp; &emsp; <select id = "cmb" name="Sec">
-  <option selected>--Please Select--</option>
-<option>Science</option>
-<option>Mathematics</option>
-</select>  <br>
-<p><font size="4">&emsp; &emsp; Title &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp;<input type ="text" id="name"> <br>
+&emsp; &emsp; Section &emsp; &emsp;&nbsp;&nbsp; &emsp; &emsp;A <br>
+&emsp; &emsp; Courses &emsp; &emsp;&nbsp; &emsp; &emsp; Mathematics
+<p><font size="4">&emsp; &emsp; Title &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp;Mid term <br>
 <p><font size="4">&emsp; &emsp; Total Marks &emsp; &emsp; &nbsp;&nbsp;  <input type ="Number" id="name"> <br></br>
 
 &emsp; &emsp;
-<a href="UploadSerially.html">Upload Result Serially</a>
+<a href="UploadSerially.html">Upload Result</a>
 <br>
 <Br>
