--- a/site/UploadSerially.html
+++ b/site/UploadSerially.html
@@ -236,14 +236,31 @@ table {
 <h2 style = "color  :#b18757; font-family : Calisto MT">&emsp; &emsp; Upload Results </h2>
 <div class="form-group">
 <br> 
-<p><font size="4">&emsp; &emsp; Course : &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp; &nbsp;Mathematics <br>
+<p><font size="4">&emsp; &emsp; Course : &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp; &nbsp;Mathematics </font></p>
+<p><font size="4">&emsp; &emsp; Title : &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp; &nbsp;Mid Term </font></p>
+<p><font size="4">&emsp; &emsp; Total Marks : &emsp; &emsp; &emsp; &nbsp; &emsp; &emsp; &nbsp;30 
+
 </div>
-<p><font size="4">&emsp; &emsp; Registration Number : &emsp; 07-B-28</font></p>
-</font>
-<p><font size="4">&emsp; &emsp; Obtained Marks &emsp; &emsp; &nbsp;&nbsp;  <input type ="Number" id="name"> <br></br>
+<p><font size="4">&emsp; &emsp; Registration Number  &emsp; 06-A-01</font>
+<font size="4">&emsp; &emsp; Obtained Marks &emsp; &emsp; &nbsp;&nbsp;  <input type ="Number" id="name"> 
    &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp;  
-<input type ="button" class="submit-link submit"  id = "Abc" font-size = "100px" value= "Next Student"> </input>
+ <p><font size="4">&emsp; &emsp; Registration Number  &emsp; 06-A-02</font>
+</font>
+<font size="4">&emsp; &emsp; Obtained Marks &emsp; &emsp; &nbsp;&nbsp;  <input type ="Number" id="name"> 
+   &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp;  
+<p><font size="4">&emsp; &emsp; Registration Number  &emsp; 06-A-03</font>
+</font>
+<font size="4">&emsp; &emsp; Obtained Marks &emsp; &emsp; &nbsp;&nbsp;  <input type ="Number" id="name"> 
+   &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp;  </font></p>
  &emsp; &emsp;&emsp; 
+<p><font size="4">&emsp; &emsp; Registration Number  &emsp; 06-A-04</font>
+</font>
+<font size="4">&emsp; &emsp; Obtained Marks &emsp; &emsp; &nbsp;&nbsp;  <input type ="Number" id="name"> 
+   &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp;  
+<p><font size="4">&emsp; &emsp; Registration Number  &emsp; 06-A-05</font>
+</font>
+<font size="4">&emsp; &emsp; Obtained Marks &emsp; &emsp; &nbsp;&nbsp;  <input type ="Number" id="name"> </font><br>
+   &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp; &emsp;&emsp;  
 <input type ="button" class="submit-link submit"  id = "Abc" font-size = "100px" value= "Upload"> </input>
 <br><br>&emsp; &emsp;
 <a href = "UploadResult.html"> Back to Course selection </a>
